# rew

./: meson.build
include/: meson.build
src/: meson.build
src/pcp/: meson.build
src/shim/: meson.build
src/trice/: candpair.c  meson.build
